--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "desafio-picpay",
   "version": "0.0.0",
   "scripts": {
+    "cy:open": "cypress open",
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
@@ -41,6 +42,7 @@
     "@angular/compiler-cli": "^20.3.0",
     "@types/bootstrap": "^5.2.10",
     "@types/jasmine": "~5.1.0",
+    "cypress": "^15.4.0",
     "jasmine-core": "~5.9.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
